[gd_scene load_steps=6 format=1]

[ext_resource path="res://nodes/intro_splash.gd" type="Script" id=1]
[ext_resource path="res://sprites/spr_intro/deanboy.jpg" type="Texture" id=2]
[ext_resource path="res://sprites/spr_intro/deanboy_text.png" type="Texture" id=3]
[ext_resource path="res://nodes/sfx.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]

resource/name = "intro"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("logo:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="intro_splash" type="Node"]

script/script = ExtResource( 1 )

[node name="blackground" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="deanboy" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 306.0
margin/top = 72.0
margin/right = 1108.0
margin/bottom = 528.0
texture = ExtResource( 2 )
stretch_mode = 3

[node name="logo" type="TextureFrame" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 314.0
margin/top = 231.0
margin/right = 1116.0
margin/bottom = 479.0
texture = ExtResource( 3 )
stretch_mode = 3

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/intro = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "intro"

[node name="sfx" parent="." instance=ExtResource( 4 )]

[node name="timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = true

[node name="fade_to_black" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="timer_2" type="Timer" parent="."]

process_mode = 1
wait_time = 1.7
one_shot = false
autostart = false

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]

[connection signal="tween_complete" from="fade_to_black" to="." method="_on_fade_to_black_tween_complete"]

[connection signal="timeout" from="timer_2" to="." method="_on_timer_2_timeout"]


